--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "prebuild": "yarn process && yarn imagine && node ./prebuild.js",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "process": "node -r @swc-node/register ./core/preprocess.ts",
     "imagine": "node -r @swc-node/register ./scripts/imagine.ts",
     "svgr": "svgr --out-dir components/icons --no-index --filename-case kebab --typescript resources/storylines"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^13.4.19",
+    "@next/bundle-analyzer": "16.1.1",
     "@piwikpro/next-piwik-pro": "^1.0.4",
     "@svgr/cli": "^8.1.0",
     "@swc-node/register": "^1.6.7",
@@ -33,34 +33,34 @@
     "js-yaml": "^4.1.0",
     "mixpanel-browser": "^2.47.0",
     "mkdirp": "^3.0.1",
-    "next": "13.4.19",
+    "next": "16.1.1",
     "next-transpile-modules": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.29",
-    "react": "18.2.0",
+    "react": "19.2.3",
     "react-cookie-consent": "^8.0.1",
-    "react-dom": "18.2.0",
+    "react-dom": "19.2.3",
     "rehype-raw": "^7.0.0",
-    "rehype-react": "^7",
+    "rehype-react": "^8.0.0",
     "remark-gfm": "^4.0.1",
-    "remark-parse": "^10.0.2",
-    "remark-rehype": "^10.1.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
     "sharp": "^0.34.1",
     "tailwindcss": "^3.3.3",
-    "unified": "^10",
+    "unified": "^11.0.5",
     "victory": "^36.6.11",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.1",
     "typescript": "5.2.2",
     "vercel": "^32.2.0"
   },
   "resolutions": {
-    "next": "13.4.19"
+    "next": "16.1.1"
   }
 }
