--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,3 +29,11 @@ jobs:
           tags: |
             ghcr.io/matthias-reis/octahedron.world:latest
             ghcr.io/matthias-reis/octahedron.world:sha-${{ github.sha }}
+
+      - name: Trigger blog-deploy
+        run: |
+          curl -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.BLOG_DEPLOY_TRIGGER_TOKEN }}" \
+            https://api.github.com/repos/matthias-reis/blog-deploy/dispatches \
+            -d '{"event_type":"deploy","client_payload":{"source":"octahedron","sha":"'"${GITHUB_SHA}"'"}}'
