refactor: new app with Solid Start

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # data layer is dynamically created
-/core/data-layer.json
+/data.json
+/routes.json
+/redirects.json
+
 /public/img
+
+# solid
+dist
+.wrangler
+.output
+.vercel
+.netlify
+.vinxi
+app.config.timestamp_*.js
+
 
 # dependencies
 /node_modules
@@ -11,13 +24,6 @@
 
 # testing
 /coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
 
 # misc
 .DS_Store
@@ -31,9 +37,6 @@ yarn-error.log*
 
 # local env files
 .env*.local
-
-# vercel
-.vercel
 
 # typescript
 *.tsbuildinfo
