content: fourth wave

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "type": "module",
   "scripts": {
     "predev": "pnpm content && pnpm imagine",
-    "dev": "vinxi dev",
-    "dev:watch": "pnpm watch:content & pnpm dev",
+    "dev": "pnpm watch:content & vinxi dev --port 4242",
     "prebuild": "pnpm content && pnpm imagine",
     "build": "vinxi build",
     "start": "vinxi start",
@@ -19,8 +18,11 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "hast-util-to-jsx-runtime": "^2.3.6",
+    "katex": "^0.16.27",
     "lucide-solid": "^0.562.0",
+    "rehype-katex": "^7.0.1",
     "rehype-react": "^8.0.0",
+    "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
     "solid-js": "^1.9.5",
