--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.1.0",
     "@types/node": "^25.0.3",
+    "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "hast-util-to-jsx-runtime": "^2.3.6",
@@ -25,6 +26,7 @@
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
+    "solid-chartjs": "^1.3.11",
     "solid-js": "^1.9.5",
     "solid-jsx": "^1.1.4",
     "tailwind-merge": "^3.4.0",
