--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
+    "firebase-admin": "^13.6.0",
     "hast-util-to-jsx-runtime": "^2.3.6",
     "katex": "^0.16.27",
     "lucide-solid": "^0.562.0",
