--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "noEmit": true,
     "strict": true,
     "types": ["vinxi/types/client"],
+    "resolveJsonModule": true,
     "isolatedModules": true,
     "paths": {
       "~/*": ["./src/*"]
