--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "watch:content": "tsx ./scripts/watch-content.ts"
   },
   "dependencies": {
+    "@solid-primitives/i18n": "^2.2.1",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.1.0",
